--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kenny's Class Page</title>
+		<title>Kenny's Frontend Web Dev Class Page</title>
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
