--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.mainedelitecattery.com%2Fsite%2FMaine_Coon_Cats_Ohio_files%2FdroppedImage_5.jpg&imgrefurl=http%3A%2F%2Fwww.mainedelitecattery.com%2F&h=307&w=276&tbnid=inGKpTLapAmXBM%3A&zoom=1&docid=paI0ZTOUIxqASM&ei=1wQsVPTpHsicygTQxoDABw&tbm=isch&ved=0CAkQMygBMAE4ZA&iact=rc&uact=3&dur=815&page=5&start=82&ndsp=23" alt="Maine Coon">
+		<img src="http://www.mainedelitecattery.com/site/Maine_Coon_Cats_Ohio_files/droppedImage_5.jpg" alt="Maine Coon">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating</p>
 		
