--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://www.mainedelitecattery.com/site/Maine_Coon_Cats_Ohio_files/droppedImage_5.jpg" alt="Maine Coon">
+		<img src="Maine-coon.jpg" alt="Maine Coon">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating</p>
 		
