--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="Maine-coon.jpg" alt="Maine Coon" height="80" width="80">
+		<img src="G:\FrontEnd\Maine-coon.jpg" alt="Maine Coon">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating</p>
 		
