--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Kenny's Frontend Web Dev Class Page</title>
-		<link href="css/main.css" type="text/css" rel="stylesheet" />
+		<link href="\main.css" type="text\css" rel="stylesheet" />
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
