--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Kenny's Frontend Web Dev Class Page</title>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="G:\FrontEnd\CSS\main.css">
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
