--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Kenny's Frontend Web Dev Class Page</title>
-		<link rel="stylesheet" type="text/css" href="G:\FrontEnd\CSS\main.css">
+		<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
@@ -20,7 +20,7 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://www.seobook.com/advantages-being-small" alt="Fish">
+		<img src="http://i.imgur.com/uE776LD.jpg" alt="Pic">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating</p>
 		
