--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Kenny's Frontend Web Dev Class Page</title>
-		<link type="text/css" rel="stylesheet" href="CSS/main.css">
+		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
