--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Lions!">
+		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Lions!" height="100" width="100">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating</p>
 		
