--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating on a good day</p>
 		
+	<script src="lib/jquery/jquery-1.10.2.min.js"></script>
 	</body>
 </html>
