--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Lions!" height="400px" width="500px">
+		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Wolves!" height="400px" width="500px">
+<img src="https://cloud.githubusercontent.com/assets/8812384/4829203/6575edb2-5f85-11e4-8513-b209f1746a99.JPG" alt="Flower!" height="400px" width="500px">
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
 		</p> I consider myself to have an intermediate rating on a good day</p>
 		
