--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kenny's Frontend Web Dev Class Page</title>
-		<link type="text/css" rel="stylesheet" href="main.css">
+		<title>Kenny's! Frontend Web Dev Class Page!</title>
+		<link type="text/css" rel="stylesheet" href="css/main.css">
+		<script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
 	</head>
 	<body>
 	<h1>Kenny's Class Page - the actual title</h1>
+	<h2>Class Web Page</h2>
+	<a href="http://frontendweb.github.io/index.html" class="btn">Frontend Web Development</a>
 		<h2>Hobbies</h2>
 			<ul>
 				<li>Running</li>
@@ -20,11 +23,13 @@
 				<li>Blazing Saddles</li>
 			</ol>
 		</h2>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Wolves!" height="400px" width="500px">
-<img src="https://cloud.githubusercontent.com/assets/8812384/4829203/6575edb2-5f85-11e4-8513-b209f1746a99.JPG" alt="Flower!" height="400px" width="500px">
+		<img src="http://upload.wikimedia.org/wikipedia/commons/7/7d/Grey_wolves_at_Wild_Animal_Sanctuary.jpg" alt="Wolves!" height="200px" width="250px">
+<img src="img/js2.png" alt="Not feeling it" class="" width='140px' height='140px'>
 		<p> I hope to receive an organized tutorial in some of the things I've used on and off for a while</p>
-		</p> I consider myself to have an intermediate rating on a good day</p>
-		
-	<script src="lib/jquery/jquery-1.10.2.min.js"></script>
+		</p> I consider myself to have an intermediate (on a good day) rating</p>
+		</p? Hopefully, learning a little (baby steps)</p?
 	</body>
+	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+	<script src="js/main.js"></script>
+	//var myDataRef = new Firebase('https://ag6zvgwqsv5.firebaseio-demo.com/');
 </html>
